--- a/AggregationApp/appsettings.json
+++ b/AggregationApp/appsettings.json
@@ -7,7 +7,9 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-5UARN3S;Database=MyDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=localhost;Database=aggregationdb;Uid=root;Pwd=mat12345678;"
+
   },
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+  
+}
