--- a/AggregationApp/Dockerfile
+++ b/AggregationApp/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /AggregationApp
-EXPOSE 85
+EXPOSE 80/tcp
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
